put fourier.js inside repo

--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
 </html>
 
 
-<script src="http://turbomaze.github.io/JS-Fourier-Image-Analysis/js/fourier.js"></script>
+<script src="fourier.js"></script>
 <script src="main.js"></script>
